# DoisNucleos

./: CMakeLists.txt  DoisNucleos.c  README.md
lib/aht20/: aht20.c
lib/bmp280/: bmp280.c
lib/ssd1306/: ssd1306.c  ssd1306.h
